<resources>
    <!-- Main -->
    <string name="app_name">Mood Diary</string>
    <string name="header_view">How are you?</string>
    <string name="fantastic_view">Fantastic!</string>

    <!-- Main menu -->
    <string name="title_action_settings">Settings</string>
    <string name="title_action_overview">Overview</string>
    <string name="title_action_export">Export</string>
    <string name="title_action_about">About</string>

    <!-- Static preference strings -->
    <string name="title_preference_select_measurement_types">Measurement types</string>
    <string name="summary_preference_select_measurement_types">Change measurement type settings</string>

    <string name="title_preference_select_reminders">Reminders</string>
    <string name="summary_preference_select_reminders">Change reminder settings</string>
    <string name="action_preference_reminders">Add a reminder</string>

    <string name="title_preference_select_theme">Theme</string>
    <string name="summary_preference_select_theme">%s</string>

    <string name="dark_preference_theme_keys">Dark</string>
    <string name="light_preference_theme_keys">Light</string>

    <string name="title_category_types">Measurement types</string> <!-- typesCategory -->
    <string name="title_category_dates">Date range</string>  <!-- datesCategory -->
    <string name="title_category_save">Save</string>         <!-- saveCategory -->
    <string name="title_category_delete">Delete</string>     <!-- delCategory -->
    <string name="title_date_from">From date</string>        <!-- datePrefBeg-->
    <string name="title_date_to">To date</string>            <!-- datePrefBeg-->

    <string name="title_category_old_reminders">Reminders</string> <!-- oldCategory -->
    <string name="title_category_time">Time</string>               <!-- timeCategory -->
    <string name="title_category_new_reminder">New</string>

    <string name="title_category_old_types">Measurement types</string>
    <string name="title_category_new_type">New</string>
    <string name="action_preference_measurements">Add a new measurement type</string>

    <!-- Dialog boxes -->
    <string name="submit">OK</string>
    <string name="delete">Remove</string>
    <string name="cancel">Back</string>

    <!-- Export menu -->
    <string name="action_save_csv">Save</string>
    <string name="summary_action_save_csv">Export the CSV to a file</string>

    <string name="action_save_sql">Save</string>
    <string name="summary_action_save_sql">Export the database</string>

    <!-- About -->
    <string name="action_donate">Thanks, here\'s a dollar!</string>
    <string name="text_about" translatable="false">by Kristian Gunstone\n\nThis is my go at making a mood tracking app for Android.\nIt\'s my first official Android as well as Java app, so there\'s been a lot to learn. I\'m sure the code can be massively improved with some care and attention from someone who might know better; perhaps that will be the future me. As I\'ve had an immediate need for this app - not finding anything satisfactory on play - it\'s been rapidly developed, using some ideas I thought up years ago.\n\nThe idea comes from a paper-submission form I\'ve used, which had fields for writing down certain things such as mood in a scale from \'very depressed\' to \'very elevated\', anxiety level, and a few more. After that, I continued using a similar system, but in textfiles. I didn\'t need much more; only analyzing the data was left out. For that I wrote some elaborate python scripts to parse the text and write json, but it just got a bit out of hand; boredom preceeded necessity.\n\nNow I\'ve fallen behind on the logging because of the effort in adding an entry, or not being near a computer with the files, and that\'s not cool.\n\nSo, here it is. The app itself is pretty simple: add a few measurements you want to note down, and a reminder or two. At the specified time, Mood Diary will appear, asking you to submit the measurements. When it\'s time to interpret the data, export the entire database, or make a custom CSV which you can import to your favourite spreadsheet or plotting software.</string>
    <string name="paypal_action_link" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=CJT9T3PU5BRZ2&amp;lc=SE&amp;item_name=Mood%20Diary&amp;item_number=MoodDiaryApp&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted</string>

    <!-- Toasts -->
    <string name="toast_saved">Saved</string>
    <string name="toast_deleted">Removed</string>
    <string name="toast_cancelled">Cancelled</string>
</resources>


