<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nu.ere.mooddiary.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="200"
        android:title="@string/title_action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_overview"
        android:orderInCategory="300"
        android:title="@string/title_action_overview"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/title_action_about"
        app:showAsAction="never" />
</menu>
